--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -5,20 +5,20 @@
         <meta http-equiv="content-language" content="en" />
         <meta name="robots" content="noindex,nofollow" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/reset.css') }}" /> <!-- RESET -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/main.css') }}" /> <!-- MAIN STYLE SHEET -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/2col.css') }}" title="2col" /> <!-- DEFAULT: 2 COLUMNS -->
-        <link rel="alternate stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/1col.css') }}" title="1col" /> <!-- ALTERNATE: 1 COLUMN -->
-        <!--[if lte IE 6]><link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/main-ie6.css') }}" /><![endif]--> <!-- MSIE6 -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/style.css') }}" /> <!-- GRAPHIC THEME -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
-        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/clublayout/css/slimbox2.css') }}" /> <!-- LIGHTBOX -->
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.slimbox2.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/jquery.switcher.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/toggle.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/ui.core.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('bundles/clublayout/js/ui.tabs.js') }}"></script>
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/reset.css') }}" /> <!-- RESET -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/main.css') }}" /> <!-- MAIN STYLE SHEET -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/2col.css') }}" title="2col" /> <!-- DEFAULT: 2 COLUMNS -->
+        <link rel="alternate stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/1col.css') }}" title="1col" /> <!-- ALTERNATE: 1 COLUMN -->
+        <!--[if lte IE 6]><link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/main-ie6.css') }}" /><![endif]--> <!-- MSIE6 -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/style.css') }}" /> <!-- GRAPHIC THEME -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('bundles/hollolayout/css/slimbox2.css') }}" /> <!-- LIGHTBOX -->
+        <script type="text/javascript" src="{{ asset('bundles/hollolayout/js/jquery.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/hollolayout/js/jquery.slimbox2.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/hollolayout/js/jquery.switcher.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/hollolayout/js/toggle.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/hollolayout/js/ui.core.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('bundles/hollolayout/js/ui.tabs.js') }}"></script>
         <script type="text/javascript">
         $(document).ready(function(){
                 $(".tabs > ul").tabs();
@@ -38,30 +38,16 @@
 
                         <!-- Switcher -->
                         <span class="f-left" id="switcher">
-                          <a href="#" rel="1col" class="styleswitch ico-col1" title="Display one column"><img src="{{ asset('bundles/clublayout/images/switcher-1col.gif') }}" alt="1 Column" /></a>
-                          <a href="#" rel="2col" class="styleswitch ico-col2" title="Display two columns"><img src="{{ asset('bundles/clublayout/images/switcher-2col.gif') }}" alt="2 Columns" /></a>
+                          <a href="#" rel="1col" class="styleswitch ico-col1" title="Display one column"><img src="{{ asset('bundles/hollolayout/images/switcher-1col.gif') }}" alt="1 Column" /></a>
+                          <a href="#" rel="2col" class="styleswitch ico-col2" title="Display two columns"><img src="{{ asset('bundles/hollolayout/images/switcher-2col.gif') }}" alt="2 Columns" /></a>
                         </span>
 
-                        {% trans with {'%name%':'ClubMaster'} %}Project: <strong>%name%</strong>{% endtrans %}
+                        {% trans with {'%name%':'Hollo'} %}Project: <strong>%name%</strong>{% endtrans %}
                 </p>
-
-                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                <p class="f-right">
-                {% trans with {'%name%':app.user} %}User: <strong>%name%</strong>{% endtrans %} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                {% render 'ClubUserBundle:Misc:LocationBar' %}
-                <strong><a href="{{ path('_security_logout') }}" id="logout">{% trans %}Log out{% endtrans %}</a></strong></p>
-                {% endif %}
 
         </div> <!--  /tray -->
 
         <hr class="noscreen" />
-
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        <!-- Menu -->
-        <div id="menu" class="box">
-          {% render "ClubMenuBundle:Default:topMenu" %}
-        </div> <!-- /header -->
-        {% endif %}
 
         <hr class="noscreen" />
 
@@ -74,13 +60,9 @@
                         <div class="padding box">
 
                                 <!-- Logo (Max. width = 200px) -->
-                                <p id="logo"><a href="{{ path('homepage') }}"><img src="{{ asset('bundles/clublayout/images/logo.gif') }}" alt="ClubMaster" title="ClubMaster" /></a></p>
+                                <p id="logo"><a href="#"><img src="{{ asset('bundles/hollolayout/images/logo.gif') }}" alt="Hollo" title="Hollo" /></a></p>
 
                         </div> <!-- /padding -->
-
-                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                          {% render "ClubMenuBundle:Default:leftMenu" %}
-                        {% endif %}
 
                 </div> <!-- /aside -->
 
@@ -89,11 +71,8 @@
                 <!-- Content (Right Column) -->
                 <div id="content" class="box">
 
-                        {% block header %}<h1>ClubMaster</h1>{% endblock %}
-                        {% if is_granted('ROLE_ADMIN') %}
-                          {% block logger %}{% render "ClubLogBundle:Log:LogView" %}{% endblock %}
-                        {% endif %}
-                        {% include 'ClubLayoutBundle:Default:flash.html.twig' %}
+                        {% block header %}<h1>Hollo</h1>{% endblock %}
+                        {% include 'HolloLayoutBundle::flash.html.twig' %}
 
                         {% block body %}{% endblock %}
                 </div> <!-- /content -->
@@ -103,8 +82,7 @@
 
         <!-- Footer -->
         <div id="footer" class="box">
-          <p class="f-left">&copy; 2011 <a href="{{ path('homepage') }}">ClubMaster</a>, All Rights Reserved &reg;</p>
-          <p class="f-right">{% render "ClubUserBundle:Misc:versionBar" %}</p>
+          <p class="f-left">&copy; 2011 <a href="#">Hollo</a>, All Rights Reserved &reg;</p>
         </div> <!-- /footer -->
       </div> <!-- /main -->
       {% block javascripts %}{% endblock %}
