Added dynamic logo.

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -66,7 +66,7 @@
                         <div class="padding box">
 
                                 <!-- Logo (Max. width = 200px) -->
-                                <p id="logo"><a href="#"><img src="{{ asset('bundles/hollolayout/images/logo.gif') }}" alt="Logo" title="Logo" /></a></p>
+                                <p id="logo"><a href="#"><img src="{{ asset(logo) }}" alt="Logo" title="Logo" /></a></p>
 
                         </div> <!-- /padding -->
 
